trino/base/hive-metastore-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-metastore
  labels:
    instance: presto
    role: hive-metastore
spec:
  selector:
    matchLabels:
      instance: presto
      role: hive-metastore
  template:
    metadata:
      labels:
        instance: presto
        role: hive-metastore
    spec:
      containers:
        - resources:
            requests:
              cpu: '1'
              memory: 4Gi
            limits:
              cpu: '1'
              memory: 4Gi
          name: hive-metastore
          command:
            - /opt/bin/start-hive-metastore.sh
          livenessProbe:
            exec:
              command:
                - bash
                - '-c'
                - netstat -lpn | grep 9083
          ports:
            - containerPort: 9083
              protocol: TCP
          image: 'quay.io/internaldatahub/hive-metastore:trino'
