trino/base/trino-coordinator-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-coordinator
  labels:
    instance: presto
    role: coordinator
spec:
  selector:
    matchLabels:
      instance: presto
      role: coordinator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        instance: presto
        role: coordinator
    spec:
      volumes:
        - name: trino-config-volume
          secret:
            secretName: trino-config
            defaultMode: 420
            items:
              - key: config-coordinator.properties
                path: config-coordinator.properties
              - key: jvm.config
                path: jvm.config
              - key: log.properties
                path: log.properties
              - key: node.properties
                path: node.properties
        - name: trino-catalogs-volume
          secret:
            secretName: trino-catalog
            defaultMode: 420
            items:
              - key: hive.properties
                path: hive.properties
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 4Gi
            requests:
              cpu: '1'
              memory: 4Gi
          name: trino-coordinator
          command:
            - /usr/lib/trino/bin/run-trino
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: trino-config-volume
              mountPath: /etc/trino
            - name: trino-catalogs-volume
              mountPath: /etc/trino/catalog
          image: trino
          args:
            - --config=/etc/trino/config-coordinator.properties
