trino/base/trino-worker-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-worker
  labels:
    instance: presto
    role: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      instance: presto
      role: worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        instance: presto
        role: worker
    spec:
      volumes:
        - name: trino-config-volume
          secret:
            secretName: trino-config
            defaultMode: 420
            items:
              - key: config-worker.properties
                path: config-worker.properties
              - key: jvm.config
                path: jvm.config
              - key: log.properties
                path: log.properties
              - key: node.properties
                path: node.properties
        - name: trino-catalogs-volume
          secret:
            secretName: trino-catalog
            defaultMode: 420
            items:
              - key: hive.properties
                path: hive.properties
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 4Gi
            requests:
              cpu: '1'
              memory: 4Gi
          name: trino-worker
          command:
            - /usr/lib/trino/bin/run-trino
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: trino-config-volume
              mountPath: /etc/trino
            - name: trino-catalogs-volume
              mountPath: /etc/trino/catalog
          image: trino
          args:
            - --config=/etc/trino/config-worker.properties
