trino/base/trino-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: trino-route
  labels:
    instance: presto
    role: coordinator
spec:
  to:
    kind: Service
    name: trino-service
  port:
    targetPort: 8080
  wildcardPolicy: None
